--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,13 +3,13 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./GameJam2025.exe"
+export_path="./Butt Wait There's Moře.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -22,7 +22,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
@@ -76,7 +76,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="webexport/GameJam2025.html"
+export_path="web/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -96,7 +96,7 @@ vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
-html/canvas_resize_policy=1
+html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
 progressive_web_app/enabled=false
@@ -107,4 +107,4 @@ progressive_web_app/orientation=1
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0, 0, 0, 1)
+progressive_web_app/background_color=Color(1, 1, 1, 1)
