--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -46,8 +46,6 @@ jobs:
       with:
         webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
         content: |
-            🔥🔥🔥
-            **FLEE! FLEE FOR YOUR LIVES! ABANDON YOUR POSTS!**
-            A GitHub Action has failed in `${{ github.repository }}` on branch `${{ github.ref_name }}`.
-            [View the chaos](${{ github.run_url }})
-            ![Denethor](https://media1.tenor.com/m/-Z4d82jp0JQAAAAd/fire-denethor.gif)
+            🔥🔥🔥 **FLEE! FLEE FOR YOUR LIVES! ABANDON YOUR POSTS!** 🔥🔥🔥
+            [A GitHub Action pipeline has failed!](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            https://media1.tenor.com/m/-Z4d82jp0JQAAAAd/fire-denethor.gif
