Send two separate messages

--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -45,7 +45,11 @@ jobs:
       uses: tsickert/discord-webhook@v7.0.0
       with:
         webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
-        embed-url: "https://tenor.com/bbe0oL0S9yr.gif"
         content: |
             🔥🔥🔥 **FLEE! FLEE FOR YOUR LIVES! ABANDON YOUR POSTS!** 🔥🔥🔥
             A GitHub Action [pipeline](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) is failing!
+    - name: Send gif
+      uses: tsickert/discord-webhook@v7.0.0
+      with:
+        webhook-url: ${{ secrets.DISCORD_WEBHOOK }}
+        content: "https://cdn.vox-cdn.com/uploads/chorus_asset/file/6886591/tumblr_mvbeinFEvL1shmc7eo5_500.0.gif"
